# sprintlog-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.bullseye  Makefile  README.html  README.md  docker-compose-pg.yaml  docker-compose.override.yml  docker-compose.yaml  docker-compose.yml  mkdocs.yml  mypy.ini  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pyproject.toml.broken  scrumlog.code-workspace  sonar-project.properties  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 0c47d166cac2_added_users_and_roles.py  3be59d796e98_.py  5c446d1f99d9_updated_project_fk.py  5d172b990858_updated_project_relationships.py  81e0c4151751_slug_audit.py  89c08d0b6f6b_added_tags.py  96f22acccb3e_updated_role_to_list_of_strings.py  a1ae9f360adf_tag_lable_optional.py  adff94f407f4_slug_fk.py  ae9e9e3e60a9_removed_userrole_association.py  dafa56d026f8_added_projects.py  f254a0293c2a_tasks.py
app/: main.py
app/controllers/: __init__.py  authors.py  backlogs.py  projects.py  tasks.py  users.py
app/domain/: __init__.py  authors.py  backlog.py  backlogs.py  projects.py  roles.py  scrumlog.py.bak  tasks.py  users.py
app/lib/: __init__.py  auth.py  cache.py  compression.py  constants.py  dependencies.py  email.py  exceptions.py  health.py  logging.py  mixins.py  openapi.py  orm.py  redis.py  sentry.py  service.py  settings.py  sqlalchemy_plugin.py  static_files.py  type_encoders.py  worker.py
app/lib/repository/: filters.py
app/lib/users/: __init__.py  controllers.py  types.py  users.py
app/worker/: __init__.py  tasks.py
deploy/docker/dev/: Dockerfile
deploy/docker/run/: Dockerfile
docs/developer_guide/: developer_setup.html  developer_setup.md
scripts/: entry  fixture.py  pre-build.py
scripts/fixures/: user.py
src/app/: asgi.py  cli.py
src/app/domain/: __init__.py  openapi.py  plugins.py  security.py  urls.py
src/app/domain/accounts/: guards.py  models.py  schemas.py
src/app/domain/accounts/controllers/: access.py  accounts.py
src/app/domain/backlogs/: __init__.py  controllers.py  dependencies.py  models.py
src/app/domain/projects/: __init__.py  controllers.py  dependencies.py  models.py
src/app/domain/room/: __init__.py  controller.py  models.py
src/app/domain/sprintlogs/: controllers.py  dependencies.py  models.py
src/app/domain/system/: controllers.py
src/app/domain/teams/: dtos.py  enums.py  guards.py  models.py  schemas.py  services.py
src/app/domain/teams/controllers/: teams.py
src/app/domain/web/public/: manifest.json
src/app/domain/web/public/assets/: @vue-dbe3cb40.js  main-b75adab1.css  main-d7fe1e51.js
src/app/lib/: cors.py  dependencies.py  exceptions.py  plugin.py  schema.py  serialization.py  service.py  settings.py
src/app/lib/db/: base.py  orm.py
src/app/lib/db/migrations/: env.py  script.py.mako
src/app/lib/db/migrations/versions/: 2023-05-18_project_backlog_302754c3712d.py  2023-05-20_backlog_slug_nullable_b7569b018e1d.py  2023-05-20_get_backlog_by_slug_b0c3d687d336.py  2023-05-28_is_task_type_92daeb7cb32c.py  2023-05-31_pin_type_25c13540dcc4.py  2023-06-01_enum_type_annotated_aa342787069a.py  2023-06-01_typeenum_str_2dc4cdce2323.py  2023-06-04_slug_fk_89c6abdaba1c.py  2023-06-09_sprint_defaults_48c4e39b77bb.py  2023-06-13_plugin_meta_1296e146605c.py  2023-06-13_plugin_meta_jsonb_99a1e0074245.py  2023-06-14_plugin_project_meta_d59790eca890.py  2023-06-22_project_owner_ef719e5e8eec.py  2023-06-29_squash_48258a9030ab.py  2023-06-30_initial_13b6784a4aa7.py  2023-07-23_squash_7767efc0c168.py  2023-08-08_sentinal_fc154ed01272.py  3437165a44f6_project_null_plugin.py  85c9bf53435e_null_enum.py
src/app/lib/plugins/: zulip.py
src/app/lib/service/: generic.py  sqlalchemy.py
src/app/plugins/: zulip.py
src/web/: swagger-ui-bundle.js  swagger-ui-bundle.min.js  swagger-ui-standalone-preset.min.js  swagger-ui.css  swagger-ui.min.js
static/: swagger-dark-ui.css  swagger-light-ui.css  swagger-ui-bundle.js  swagger-ui-bundle.min.js  swagger-ui.js  swagger-ui.min.js
tests/: conftest.py
tests/integration/: conftest.py  test_authors.py  test_countries.py  test_tests.py
tests/unit/: conftest.py
tests/unit/lib/: test_dependencies.py  test_exceptions.py  test_health.py  test_log.py  test_logging.py  test_worker.py
